# dbdaora

./: .bumpversion.cfg  .coveragerc  .gitignore  .gitmodules  404.html  Bakefile  CHANGELOG.md  CONTRIBUTING.md  Makefile  Pipfile  README.md  fake_mypy.py  index.html  mkdocs.yml  mypy.ini  pyproject.toml  setup.py  sitemap.xml
changelog/: index.html
contributing/: index.html
dataclassdb/: __init__.py  __version__.py
dataclassesdb/: __init__.py
dbdaora/: __init__.py  cache.py  circuitbreaker.py  conftest.py  data.py  entity.py  exceptions.py  hashring.py  keys.py  query.py  repository.py
dbdaora/_tests/: test_unit_cache.py  test_unit_repository_subclass_validation.py
dbdaora/boolean/: conftest.py  factory.py  service.py
dbdaora/boolean/_tests/: test_integration_service_boolean_aioredis_add.py  test_integration_service_boolean_aioredis_delete.py  test_integration_service_boolean_aioredis_get_many.py  test_integration_service_boolean_aioredis_get_one.py  test_unit_boolean_service.py
dbdaora/boolean/repositories/: __init__.py  datastore.py
dbdaora/data_sources/: __init__.py  db_data.py
dbdaora/data_sources/fallback/: __init__.py  datastore.py  dict.py  mongodb.py
dbdaora/data_sources/memory/: __init__.py  aioredis.py  dict.py
dbdaora/entity_based/: repository.py
dbdaora/geospatial/: conftest.py  entity.py  factory.py  query.py
dbdaora/geospatial/_tests/: conftest.py  test_integration_service_geospatial_aioredis_add.py  test_integration_service_geospatial_aioredis_delete.py  test_integration_service_geospatial_aioredis_exists.py  test_integration_service_geospatial_aioredis_get_many.py  test_integration_service_geospatial_aioredis_get_one.py  test_unit_geospatial_service.py
dbdaora/geospatial/repositories/: __init__.py  datastore.py  mongodb.py
dbdaora/geospatial/service/: __init__.py  datastore.py  mongodb.py
dbdaora/hash/: conftest.py  entity.py  factory.py  query.py  repository.py  service.py
dbdaora/hash/_tests/: conftest.py  test_integration_service_hash_aioredis_add.py  test_integration_service_hash_aioredis_delete.py  test_integration_service_hash_aioredis_exists_many.py  test_integration_service_hash_aioredis_get_many.py  test_integration_service_hash_aioredis_get_one.py  test_unit_hash_service.py  test_unit_repository_aioredis_hash_get.py  test_unit_repository_aioredis_hash_get_fields.py  test_unit_repository_dict_hash_get.py  test_unit_repository_dict_hash_get_fields.py
dbdaora/hash/repositories/: __init__.py  datastore.py  mongodb.py
dbdaora/hash/service/: __init__.py  datastore.py  mongodb.py
dbdaora/repositories/: base.py  entity.py
dbdaora/repositories/_tests/: test_unit_dict_repository_get.py
dbdaora/repository/: __init__.py  datastore.py
dbdaora/service/: __init__.py  builder.py
dbdaora/services/: hash.py
dbdaora/sorted_set/: conftest.py  entity.py  factory.py  query.py  repository.py  service.py
dbdaora/sync/: __init__.py
docs/: changelog.md  index.md  typed-dict.md
docs/domain-model/: simple.md
docs/src/: test.sh  tests.bats  typed_dict.output  typed_dict.py
docs/src/index/: tests.bats  (+5 more)
domain-model/simple/: index.html
search/: search_index.json
src/: test.sh  typed_dict.output  typed_dict.py
src/domain_model/: simple.output  simple.py
src/index/: simple_domain_model.output  simple_domain_model.py  simple_hash.py  simple_service.py  simple_sorted_set.output  tests.bats
stubs/aioredis/: __init__.py  __init__.pyi  commands.py  commands.pyi
stubs/bson/: objectid.pyi
stubs/cachetools/: __init__.pyi
stubs/circuitbreaker/: __init__.pyi
stubs/motor/: motor_asyncio.pyi
stubs/newrelic/: agent.pyi
stubs/pymongo/: errors.pyi
typed-dict/: index.html
(+127 files in other folders)
