[build-system]
requires = ['flit']
build-backend = 'flit.buildapi'

[tool.flit.metadata]
module = 'dbdaora'
author = 'Diogo Dutra'
author-email = 'diogodutradamata@gmail.com'
home-page = 'https://github.com/dutradda/dbdaora'
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Database',
]
requires = [
    'circuitbreaker',
    'cachetools',
]
description-file = 'README.md'
requires-python = '>=3.8'

[tool.flit.metadata.urls]
Documentation = 'https://dutradda.github.io/dbdaora/'

[tool.flit.metadata.requires-extra]
test = [
    'black',
    'isort',
    'ipython',
    'mypy',
    'pytest-asyncio',
    'pytest-cov',
    'pytest-mock',
    'pytest',
]
doc = [
    'mkdocs',
    'mkdocs-material',
    'markdown-include'
]
datastore = [
    'google-cloud-datastore'
]
aioredis = [
    'aioredis'
]
