[build-system]
requires = ['flit']
build-backend = 'flit.buildapi'

[tool.flit.metadata]
module = 'dbdaora'
author = 'Diogo Dutra'
author-email = 'diogodutradamata@gmail.com'
home-page = 'https://github.com/dutradda/dbdaora'
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3 :: Only',
    'Topic :: Database',
]
requires = [
    'circuitbreaker',
    'cachetools',
    'jsondaora',
]
description-file = 'README.md'
requires-python = '>=3.8'

[tool.flit.metadata.urls]
Documentation = 'https://dutradda.github.io/dbdaora/'

[tool.flit.metadata.requires-extra]
test = [
    'black',
    'isort',
    'ipython',
    'mypy',
    'pytest-asyncio',
    'pytest-cov',
    'pytest-mock',
    'pytest',
]
doc = [
    'mkdocs',
    'mkdocs-material',
    'markdown-include'
]
datastore = [
    'google-cloud-datastore'
]
aioredis = [
    'aioredis'
]
mongodb = [
    'motor'
]

[tool.flit.sdist]
exclude = [
    "dbdaora/conftest.py",
    "dbdaora/_tests",
    "dbdaora/*/_tests",
    "dbdaora/*/*/_tests",
    "Makefile",
    "Bakefile",
    "devtools",
    "docs",
    "stubs",
    "mypy.ini",
    "mkdocs.yml",
    "theme",
    ".bumpversion.cfg",
    ".coveragerc",
    ".gitignore",
    ".gitmodules",
    ".flake8",
]

[tool.isort]
case_sensitive= '1'
use_parentheses = '1'
line_length = '79'
order_by_type = '1'
multi_line_output = '3'
include_trailing_comma = '1'
lines_after_imports = '2'
atomic = '1'

[tool.black]
exclude = '''
    \.pyi
'''
target-version = ['py38']
line-length = '79'
skip-string-normalization = '1'
